[package]
name = "nam2json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
lazy_static = "1.4.0"
rumqttc = "0.24.0"
rusqlite = "0.31.0"
sea-query = { version = "0.30.7", default-features = false, features = [
    "backend-sqlite",
    "derive",
    "sea-query-derive",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "time", "macros"] }
