[package]
name = "zpowergraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
lazy_static = "1.4.0"
log = "0.4.21"
rumqttc = "0.24.0"
sea-query = { version = "0.30.7", default-features = false, features = [
    "backend-sqlite",
    "derive",
    "sea-query-derive",
] }
sea-query-binder = { version = "0.5.0", features = ["sqlx-sqlite", "with-bigdecimal", "with-time"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["runtime-tokio"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "time", "macros"] }
